themes/evolve/lessc/popups.less
/* ... */
.ui-dialog{
    div.ui-dialog-content {
        overflow: hidden;
        overflow-y: auto;
    }
    div.ui-widget-header {
        border: 0px solid #dddddd;
        background: none;
    }
}

.modal-body{
    ul{
        font-size: 1.2em;
        color: #000;
    }
 }

.ui-draggable .ui-dialog-titlebar{
    cursor: default!important;
}
/* -------------- END GENERAL POPUP STYLES --------------*/

/*----------------------- POPUP OVERLAY -------------
include the following div to the template where overlay is needed
<div class="overlay"></div>
-----------------------------------------------------------------*/
.overlay{
    position: fixed;
    z-index: 1000;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    background: rgba(0,0,0,0.5);
    display: none;
    .edu-step-note{
        display: none;
    }
}

.no-js{
    .white-overlay{
        display: none;
    }
}

.white-overlay{
    .overlay;
    display: block;
    background: #fff;
    background-image: url(/sites/default/files/DASHBOARD/renew-membership/MEMBERSHIP_1500X568.png);
    background-size: contain;
    background-position: 50%;
    background-repeat: no-repeat;
    .loaders{
        visibility: visible;
        .loader-quart{
            border: 6px solid rgba(0,0,0,0.4);
            &:after{
                border-top-color: #000;
            }
        }
    }
}

.ui-resizable-handle{
    display: none!important;
}
/*--------------- POPUPS ORIGIN ------------------*/
div[id="jobnoticement"], div[id="processWindow"], 
div[id="registerPDUser"], div[id="popUpWindow"], 
div[id="deleteConfirmwindow"], #registerMember-container,
div[id="loginPopWindow"],div[id="myMap"], div[id="signupWebUser"],
#insuranceTermsandConditions{
    display:none;
}

div[aria-describedby="jobnoticement"] .ui-widget-header, 
div[aria-describedby="registerPDUser"] .ui-widget-header, 
div[aria-describedby="processWindow"] .ui-widget-header, 
div[aria-describedby="popUpWindow"] .ui-widget-header, 
div[aria-describedby="deleteConfirmwindow"] .ui-widget-header, 
div[aria-describedby="registerMember"] .ui-widget-header, 
div[aria-describedby="loginPopWindow"] .ui-widget-header, 
div[aria-describedby="myMap"] .ui-widget-header{
    border:none!important;
	background-color:white!important;	
}
/*--------------- END HIDE POPUPS ORIGIN ------------------*/

/* JOIN/RENEW INSURANCE */
#insuranceTermsandConditions{
    .large-popup;
    .modal-dialog{
        margin-top: 0!important;
    }
    .modal-content{
        .modal-body{
            max-width: 650px;
            max-height: 550px;
            @media all and (max-width: @larger-phone-width) {
                max-height: 400px;
            }
            @media all and (max-width: 335px) {
                max-height: 300px;
            }
        }
        .modal-footer{
            margin-top: 0;
        }
    }
    .modal-footer{
        display: flex;
        justify-content: center;
    }
}

/* JOIN/RENEW FORMS - ADD PAYMENT CART */
#addPaymentCardForm-container{
    .small-popup;
    padding: 30px;
    top: calc(~'50vh - 332px')!important;
    border-radius: 0;
    overflow: hidden;
    overflow-y: hidden;
    input[type="text"]{
        background: #fff;
    }
    input[type="submit"]{
        float: none;
        display: inline-block;
        margin-bottom: 10px;
        margin-top: 4px;
        background-color: @bright-blue;
        border-width: 0px;
        padding: 3px 20px;
        color: #fff !important;
        font-size: 15px;
        font-weight: 700;
        font-family: 'Cairo';
        min-width: 110px;
        letter-spacing: 0.5px;
        text-align: center;
        &:hover{
            color: #fff;
            opacity: 0.9;
            cursor: pointer;
        }
    }
    div[class^="col-"]{
        margin-top: 8px;
    }
    label{
        margin-bottom: 6px;
    }
    @media all and (max-width: @larger-phone-width) {
        padding: 20px 10px 10px;
        top: calc(~'50vh - 312px')!important;
        .light-lead-heading{
            font-size: 2em;
        }
    }
    @media all and (max-width: @phone-width) {
        #addPaymentCardForm{
            &::-webkit-scrollbar{
                display: none;
            }
        }
    }
    @media all and (max-width: 340px){
        top: calc(50vh - 265px) !important;
    }
}
/* ... */

